Sun Mar 03 23:52:37 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,runfilter.cc: If setpgid() is available, put each
	  external filter in its own process group so we can easily kill it
	  along with any processes which it starts.

Mon Feb 25 19:03:06 GMT 2013  Olly Betts <olly@survex.com>

	* docs/overview.rst: Update to add com to the list of ignored
	  extensions.

Thu Feb 21 22:09:44 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Ignore .com files by default.

Tue Feb 19 04:19:50 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Feb 19 03:13:08 GMT 2013  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Sample from HTML now
	  contains \n where a line or paragraph break would appear, and \t
	  between table cells.

Tue Feb 19 03:02:58 GMT 2013  Olly Betts <olly@survex.com>

	* gen-myhtmltags,htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.tokens:
	  Generate a lookup table for where we should insert a space in place
	  of an HTML tag rather than using a switch statement for that.

Tue Feb 12 20:43:14 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Remove my-html-tok.h in "make clean" not "make
	  distclean", since it's built by "make" and that's what the automake
	  manual recommends for files built by "make".

Tue Feb 12 20:41:53 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Clean up my-html-tok.h in "make distclean".

Tue Feb 12 20:03:51 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship common/keyword.h.

Tue Feb 12 19:27:26 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship common/Tokeniseise.pm.

Tue Feb 12 00:44:23 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Fix to work in VPATH build.

Mon Feb 11 22:38:16 GMT 2013  Olly Betts <olly@survex.com>

	* xlsxparse.cc: Correct "max" -> "min" when reserving space for shared
	  strings.  This only means we now reserve a more appropriate amount
	  of space to start with.
