@@ -1,3 +1,10 @@
+Mon Mar 04 03:56:22 GMT 2013  Olly Betts <olly@survex.com>
+
+	* configure.ac,omindex.cc,runfilter.cc,runfilter.h: If omindex
+	  receives a SIGHUP, SIGINT, SIGQUIT or SIGTERM, then kill any active
+	  external filter child process before handling the signal as we
+	  otherwise would.
+
 Sun Mar 03 23:52:37 GMT 2013  Olly Betts <olly@survex.com>
 
 	* configure.ac,runfilter.cc: If setpgid() is available, put each
